# onnx4fl

./: .gitignore  README.org
cc++/: CMakeLists.txt  myjob.sh  slurm-2311196.out_Shuffle_60_LR1e-7_ON  slurm-2333628.out_Shuffle_60_LR1e-7_RE  slurm-2360092.out_Shuffle_40_LR1e-7_RE  slurm-2385218.out_Shuffle_40_LR1e-7_ON  slurm-2411199.out_Shuffle_40_LR5e-7_ON  slurm-2445779.out_Shuffle_40_LR5e-7_RE  slurm-2475083.out_Shuffle_60_LR5e-7_RE  slurm-2498922.out_Shuffle_60_LR5e-7_ON
cc++/cuda12inferc/: CMakeLists.txt  cuda12inferc.cc  utils.h
cc++/cuda12inferc++/: CMakeLists.txt  cuda12inferc++.cc
cc++/cuda12trainc/: CMakeLists.txt  cuda12trainc.cc
cc++/cuda12trainc++/: CMakeLists.txt  cuda12trainc++.cc  session.h  train.h
cc++/inferc/: CMakeLists.txt  inferc.cc
cc++/inferc++/: CMakeLists.txt  inferc++.cc  utils.h
cc++/trainc/: CMakeLists.txt  trainc.cc
cc++/trainc++/: CMakeLists.txt  infer.h  train.h  trainc++.cc
js/: .env  README.org  index.js  package-lock.json  package.json
python/: Processes.org  aligning.py  config.py  custom_classes.py  encoder.py  job.sh  main.py  myjob.sh  onnx4pytorch.py  onnx4tensorflow.py  onnx_test_retrain.py  plots.py  pytorch_test_retrain.py  requirements.txt  serialization.py  stopword.py  tfjob.sh  tokenization.py  training.py  utils.py  vectorjob.sh
python/name/: allName.json  allName.py  markName.json  noneName.json  plotName.py  withName.json
rust/: Cargo.toml  Config.toml  README.org
rust/myonnx/: Cargo.toml  Config.toml
rust/myonnx/src/: config.rs  main.rs
rust/onnxruntime/: Cargo.toml
rust/onnxruntime-sys/: Cargo.toml  build.rs
rust/onnxruntime-sys/src/: lib.rs
