cmake_minimum_required(VERSION 3.13)

# Project
project(Connxruntime C CXX)
string(APPEND CMAKE_CXX_FLAGS " -Wall -Wextra")
string(APPEND CMAKE_C_FLAGS " -Wall -Wextra")


#onnxruntime providers
option(onnxruntime_USE_CUDA "Build with CUDA support" ON)
option(onnxruntime_USE_OPENVINO "Build with OpenVINO support" OFF)
option(onnxruntime_USE_NNAPI_BUILTIN "Build with builtin NNAPI lib for Android NNAPI support" OFF)
option(onnxruntime_USE_DNNL "Build with DNNL support" OFF)
option(onnxruntime_USE_NUPHAR "Build with Nuphar" OFF)
option(onnxruntime_USE_TENSORRT "Build with TensorRT support" OFF)
option(LIBPNG_ROOTDIR "libpng root dir")
option(ONNXRUNTIME_ROOTDIR "onnxruntime root dir")

set (PROJECT_NAME "ONNX retraing for C++")
string(TIMESTAMP TODAY "%d/%m/%Y %H:%M:%S")
set (PROJECT_BUILD_DATE ${TODAY})

set(ONNXPATH             "/user/silin.zhao/u11656/.project/dir.lustre-grete/silin/onnxruntime/onnxruntime18")
set(ONNXPATHTRAIN        "/user/silin.zhao/u11656/.project/dir.lustre-grete/silin/onnxruntime/onnxruntime18training")
set(ONNXPATHCUDA12       "/user/silin.zhao/u11656/.project/dir.lustre-grete/silin/onnxruntime/onnxruntime18cuda12")
set(CHECKPOINT_PATH                   "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle/checkpoint")
set(TRAINING_MODEL_PATH               "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle/training_model.onnx")
set(EVAL_MODEL_PATH                   "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle/eval_model.onnx")
set(OPTIMIZER_MODEL_PATH              "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle/optimizer_model.onnx")
set(INFERENCE_PATH                    "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle/inference.onnx")
set(CACHE_DIR_PATH                    "../../artifacts/C5000_Dgpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle")
set(ONNX_DYNAMO_INFERENCE_PATH        "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle_Onnx_Train.onnx")
set(ONNX_TORCHSCRIPT_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle_Onnx_Infer.onnx")
set(ONNX_C20RESUMING_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle_RE20_Onnx_Infer_Resume.onnx")
set(ONNX_C40RESUMING_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP40_R5e-07_Shuffle_RE40_Onnx_Infer_Resume.onnx")
set(ONNX_C20ONDEVICE_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP20_R5e-07_Shuffle_RE20_Onnx_Infer_Ondevice.onnx")
set(ONNX_C40ONDEVICE_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Econversation_BS001_Head1_L4_EP40_R5e-07_Shuffle_RE40_Onnx_Infer_Ondevice.onnx")
set(ONNX_Q20RESUMING_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Equestion_BS001_Head1_L4_EP20_R5e-07_Shuffle_RE20_Onnx_Infer_Resume.onnx")
set(ONNX_Q40RESUMING_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Equestion_BS001_Head1_L4_EP40_R5e-07_Shuffle_RE40_Onnx_Infer_Resume.onnx")
set(ONNX_Q20ONDEVICE_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Equestion_BS001_Head1_L4_EP20_R5e-07_Shuffle_RE20_Onnx_Infer_Ondevice.onnx")
set(ONNX_Q40ONDEVICE_INFERENCE_PATH   "../../onnx/C5000_Dcpu_P60_Equestion_BS001_Head1_L4_EP40_R5e-07_Shuffle_RE40_Onnx_Infer_Ondevice.onnx")

set(ONDEVICE_INFERENCE_PATH           "../../onnx/")
set(DATA_PATH                         "/mnt/lustre-emmy-hdd/usr/u11656/silin_onnx/data_binary_shuffle/")
set(LABEL_PATH                        "/mnt/lustre-emmy-hdd/usr/u11656/silin_onnx/data_binary_shuffle/")
set(RESUME_DATA_NAME                  "Data_host_train")
set(RESUME_LABEL_NAME                 "Label_host_train")
set(ONDEVICE_DATA_NAME                "Data_ondevice_train")
set(ONDEVICE_LABEL_NAME               "Label_ondevice_train")
set(INFER_DATA_NAME                   "Data_onnx_infer")
set(INFER_LABEL_NAME                  "Label_onnx_infer")
set(ONNX_DYNAMO_INFERENCE_INPUT       "input")
set(ONNX_DYNAMO_INFERENCE_OUTPUT      "output")
set(ONNX_TORCHSCRIPT_INFERENCE_INPUT  "residual_x")
set(ONNX_TORCHSCRIPT_INFERENCE_OUTPUT "classifer_1")
set(ONDEVICE_INFERENCE_INPUT          "input")
set(ONDEVICE_INFERENCE_OUTPUT         "output")
set(EPOCHS                            40)
set(INSTANCE_NUMBER                   1556)
set(INSTANCE_NUMBER_INFER             1556)
set(INSTANCE_NUMBER_60ON              1556)
set(INSTANCE_NUMBER_60RE              9336)
set(INSTANCE_NUMBER_40ON              6224)
set(INSTANCE_NUMBER_40RE              6224)
set(INSTANCE_WORDS_LENGTH             280)
set(INSTANCE_WORDS_DIM                512)
set(TARGET_CLASS_NUMBER               144)
set(LEARNING_RATE                     0.0000005)
set(NEW_LEARNING_RATE                 0.0000001)


add_subdirectory(inferc)
add_subdirectory(inferc++)
add_subdirectory(trainc)
add_subdirectory(trainc++)
add_subdirectory(cuda12inferc)
add_subdirectory(cuda12inferc++)
# add_subdirectory(cuda12trainc)
add_subdirectory(cuda12trainc++)

