add_executable(inferc "inferc.cc")
target_include_directories(inferc PRIVATE "${ONNXPATH}/include")
# target_link_directories(inferc PRIVATE "${ONNXPATH}/lib")
target_link_libraries(inferc PRIVATE "${ONNXPATH}/lib/libonnxruntime.so")

target_compile_definitions(inferc PRIVATE INSTANCE_NUMBER=${INSTANCE_NUMBER})
target_compile_definitions(inferc PRIVATE INSTANCE_WORDS_LENGTH=${INSTANCE_WORDS_LENGTH})
target_compile_definitions(inferc PRIVATE INSTANCE_WORDS_DIM=${INSTANCE_WORDS_DIM})
target_compile_definitions(inferc PRIVATE TARGET_CLASS_NUMBER=${TARGET_CLASS_NUMBER})
target_compile_definitions(inferc PRIVATE DATA_PATH=\"${DATA_PATH}\")
target_compile_definitions(inferc PRIVATE LABEL_PATH=\"${LABEL_PATH}\")
target_compile_definitions(inferc PRIVATE DATA_NAME=\"${DATA_NAME}\")
target_compile_definitions(inferc PRIVATE LABEL_NAME=\"${LABEL_NAME}\")
target_compile_definitions(inferc PRIVATE ONNX_DYNAMO_INFERENCE_PATH=\"${ONNX_DYNAMO_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_DYNAMO_INFERENCE_INPUT=\"${ONNX_DYNAMO_INFERENCE_INPUT}\")
target_compile_definitions(inferc PRIVATE ONNX_DYNAMO_INFERENCE_OUTPUT=\"${ONNX_DYNAMO_INFERENCE_OUTPUT}\")
target_compile_definitions(inferc PRIVATE ONNX_TORCHSCRIPT_INFERENCE_PATH=\"${ONNX_TORCHSCRIPT_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_TORCHSCRIPT_INFERENCE_INPUT=\"${ONNX_TORCHSCRIPT_INFERENCE_INPUT}\")
target_compile_definitions(inferc PRIVATE ONNX_TORCHSCRIPT_INFERENCE_OUTPUT=\"${ONNX_TORCHSCRIPT_INFERENCE_OUTPUT}\")
target_compile_definitions(inferc PRIVATE ONDEVICE_INFERENCE_PATH=\"${ONDEVICE_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONDEVICE_INFERENCE_INPUT=\"${ONDEVICE_INFERENCE_INPUT}\")
target_compile_definitions(inferc PRIVATE ONDEVICE_INFERENCE_OUTPUT=\"${ONDEVICE_INFERENCE_OUTPUT}\")
target_compile_definitions(inferc PRIVATE PROJECT_BUILD_DATE=\"${PROJECT_BUILD_DATE}\")

target_compile_definitions(inferc PRIVATE ONNX_C20RESUMING_INFERENCE_PATH=\"${ONNX_C20RESUMING_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_C40RESUMING_INFERENCE_PATH=\"${ONNX_C40RESUMING_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_C20ONDEVICE_INFERENCE_PATH=\"${ONNX_C20ONDEVICE_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_C40ONDEVICE_INFERENCE_PATH=\"${ONNX_C40ONDEVICE_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_Q20RESUMING_INFERENCE_PATH=\"${ONNX_Q20RESUMING_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_Q40RESUMING_INFERENCE_PATH=\"${ONNX_Q40RESUMING_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_Q20ONDEVICE_INFERENCE_PATH=\"${ONNX_Q20ONDEVICE_INFERENCE_PATH}\")
target_compile_definitions(inferc PRIVATE ONNX_Q40ONDEVICE_INFERENCE_PATH=\"${ONNX_Q40ONDEVICE_INFERENCE_PATH}\")				  


